--- a/ProjectDiamondShop/Views/Manager/CreateVoucher.cshtml
+++ b/ProjectDiamondShop/Views/Manager/CreateVoucher.cshtml
@@ -26,6 +26,7 @@
             background-color: white;
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
             .form-container h2 {
@@ -74,7 +75,31 @@
 
             .form-container .alert {
                 border-radius: 10px;
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                animation: fadeInOut 5s forwards;
+                color: red;
             }
+
+        @@keyframes fadeInOut {
+            0% {
+                opacity: 0;
+            }
+
+            10% {
+                opacity: 1;
+            }
+
+            90% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0;
+            }
+        }
 
         .back-to-admin {
             display: flex;
@@ -115,7 +140,7 @@
                 </div>
                 <div class="mb-3">
                     <label for="discount" class="form-label">Discount (%):</label>
-                    <input type="number" class="form-control" id="discount" name="discount" min="0" max="10" required />
+                    <input type="number" class="form-control" id="discount" name="discount" min="0" max="20" required />
                 </div>
                 <div class="mb-3">
                     <label for="quantity" class="form-label">Quantity:</label>
